handling correctly popout overflow

--- a/src/cwDiagramHighlight.less
+++ b/src/cwDiagramHighlight.less
@@ -2,10 +2,15 @@
 @import "../../_mixins";
 
 
+.cw-diagram-search-container {
+  overflow: hidden;
+}
+
+
 .cw-diagram-options-li {
     display: inline-flex;
     width : 100%;
-        border: 1px solid white;
+    border: 1px solid white;
     padding: 5px;
 }
 
@@ -21,7 +26,16 @@
     width: 55%;
 }
 
-.cw-diagram-options-li select,.HTML5searchFiler{
+.cw-diagram-options-li input[type=date] {
+    margin-left: 10px;
+}
+
+.searchFilerDateLegend {
+    padding-left: 10px;
+    margin-left: 45%;
+}
+
+.cw-diagram-options-li select,.cw-diagram-options-li input[type=date],.HTML5searchFiler{
     display: block;
     padding: 5px;
     height: 100%;
@@ -51,4 +65,75 @@ span.diagramSearchHeader {
     word-wrap: break-word;
     overflow: hidden;
 }
+
+
+@import "../../_variables";
+@import "../../_mixins";
+
+
+.popout-content {
+    overflow: hidden;
+
+}
+
+
+.cw-diagram-options-li {
+    display: inline-flex;
+    width : 100%;
+    border: 1px solid white;
+    padding: 5px;
+}
+
+.cw-diagram-search-objectType {
+    display: inline-flex;
+    width: 100%;
+    border: 1px solid white;
+    padding: 5px;
+}
+
+
+.cw-diagram-options-li input,.cw-diagram-options-li select,.HTML5searchFiler{
+    width: 55%;
+}
+
+.cw-diagram-options-li input[type=date] {
+    margin-left: 10px;
+}
+
+.searchFilerDateLegend {
+    padding-left: 10px;
+    margin-left: 45%;
+}
+
+.cw-diagram-options-li select,.cw-diagram-options-li input[type=date],.HTML5searchFiler{
+    display: block;
+    padding: 5px;
+    height: 100%;
+    color: @cwFontTextColor;
+    font-size: 12px;
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
+    border-radius: 6px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    outline: none;
+}
+
+
+span.diagramSearchHeader {
+    width: 45%;
+    font-weight: bold;
+    border: 1px solid white;
+    padding: 5px;
+    padding-left: 0px;
+    border-top-width: 0;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    -ms-word-break: normal;
+    word-break: break-word;
+    word-wrap: break-word;
+    overflow: hidden;
+}
+
 
